--- a/Notebook/Jupyter/path/KasagoDL1.ipynb
+++ b/Notebook/Jupyter/path/KasagoDL1.ipynb
@@ -40,13 +40,11 @@
     "### パーセプトロンの概要\n",
     "パーセプトロンは\n",
     "- AND, NAND, ORなどの論理回路を表現できる。\n",
-    "- 「重み」のパラメタ（w1, w2, θ（-b））の決定は人手によって行われる。\n",
-    "- しかし、XORは、\n",
-    "  - 単層パーセプトロンでは表現できない。  \n",
+    "- 「重み」のパラメタ（wi, w0）の決定は人手によって行われる。\n",
+    "- しかし、XORは、単層パーセプトロンでは表現できない。  \n",
     "単層パーセプトロンは、線形領域しか表現できないため。\n",
-    "  - 従って、多層パーセプトロン（MLP）を用いる。  \n",
+    "- 従って、多層パーセプトロン（MLP）を用いる。  \n",
     "多層パーセプトロン（MLP）は、非線形領域を表現できるため。\n",
-    "\n",
     "- NANDの組み合わせから、原理的にはコンピュータを作ることができる。\n",
     "\n",
     "<img src=\"../work/single-perceptron.png\" width=\"50%\">\n",
@@ -209,7 +207,6 @@
    "cell_type": "markdown",
    "id": "dab72463-ab0a-4b37-b5e0-9b18ebd9af4e",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
