--- a/Notebook/Jupyter/path/KasagoDL2.ipynb
+++ b/Notebook/Jupyter/path/KasagoDL2.ipynb
@@ -30,7 +30,7 @@
     "- コレはコレで関数のようなもの。\n",
     "- 重みを変更して現象に近似させる（近似関数的な）。  \n",
     "（結局、ディープラーニングは最小二乗法のお化けのようなもの）\n",
-    "- ちなみに、重みは、y=ax^b で言ったら a とか b の事。"
+    "- ちなみに、重みは、y=ax^b で言ったら a とか b 等のパラメタの事。"
    ]
   },
   {
@@ -59,7 +59,7 @@
    "source": [
     "### MINSTデータのロード\n",
     "- load_mnist() のプロキシ設定I/Fは[環境変数（HTTP(S)_PROXY）](PythonTraining.ipynb)のみ。\n",
-    "- 他環境でエラーになる場合、./kasago/dataset/mnist.pklを削除。\n",
+    "- 他環境で実行時にエラーになる場合、./kasago/dataset/mnist.pklを削除。\n",
     "- [dataset/mnist.py](Kasago/dataset/mnist.py)"
    ]
   },
@@ -111,7 +111,7 @@
     "  - の場合、重みはn行m列の行列になる。\n",
     "- なお活性化関数は、\n",
     "  - 入力層は、[シグモイド関数](KasagoDL1.ipynb)を使っている。\n",
-    "  - 出力層は0-9の10個で、[ソフトマックス関数](KasagoDL1.ipynb)になる。\n",
+    "  - 出力層は、10クラス分類なので、0-9の10個で、[ソフトマックス関数](KasagoDL1.ipynb)になる。\n",
     "- Import\n",
     "  - [dataset/mnist.py](Kasago/dataset/mnist.py)\n",
     "  - [common/functions.py](Kasago/common/functions.py)"
@@ -490,7 +490,7 @@
     "- hを0に近付けられないので、hに小さい値を使用し、\n",
     "- 中心差分f(x+h) - f(x-h)を使用して誤差を減らす。\n",
     "\n",
-    "ただし、 [誤差逆伝播法](KasagoDL3.ipynb)では「解析的」に解く。"
+    "ただし、 実際の[誤差逆伝播法](KasagoDL3.ipynb)では「解析的」に解く。"
    ]
   },
   {
@@ -871,13 +871,13 @@
     "ニューラルネットワークにおける[損失関数](#損失関数)を偏微分して勾配を計算する。  \n",
     "- そもそも近似関数と[損失関数](#損失関数)の違いに注意。\n",
     "  - 近似関数には重み変数が含まれ、[損失関数](#損失関数)にも重み変数が含まれる。\n",
-    "  - 近似関数の[損失関数](#損失関数)を重み変数で微分して勾配を求める。\n",
-    "  - 勾配は[損失関数](#損失関数)の最小値となる点を求めるために使用。\n",
-    "  - [損失関数](#損失関数)の最小値となる点の値は、近似関数で最適化された重みの値となる。\n",
+    "  - 近似関数の[損失関数](#損失関数)を重み変数で微分して重みの勾配を求める。\n",
+    "  - 勾配は[損失関数](#損失関数)の最小値となる点（重み）を求めるために使用。\n",
+    "  - [損失関数](#損失関数)の最小値となる点（重み）の値は、近似関数で最適化された重みの値となる。\n",
     "- コレをニューラルネットワークに適用するとなると、\n",
     "  - ニューラルネットワーク自体も近似関数で、\n",
-    "  - 近似関数の[損失関数](#損失関数)を重み変数で[数値微分](#数値微分)して勾配を計算する。\n",
-    "  - 各重み（行列の要素）が[損失関数](#損失関数)のx、y、zになってコレを偏微分するイメージ。\n",
+    "  - 近似関数の[損失関数](#損失関数)を重み変数で偏微分（ココでは[数値微分](#数値微分)）して勾配を計算する。\n",
+    "  - 各重み（行列の要素）が[損失関数](#損失関数)のx、y、zなどの変数になってコレを偏微分するイメージ。\n",
     "- Import\n",
     "  - [common/functions.py](Kasago/common/functions.py)\n",
     "  - [common/gradient.py](Kasago/common/gradient.py)"
@@ -948,8 +948,8 @@
    "source": [
     "##### ２層ニューラルネットワークの勾配\n",
     "２層ニューラルネットワークで実際に重みやバイアス毎に勾配を計算する。\n",
-    "- 通常版：微分して勾配を計算する。\n",
-    "- 高速版：[誤差逆伝播法](KasagoDL3.ipynb)で勾配を計算\n",
+    "- 通常版：[数値微分](#数値微分)で偏微分を近似し勾配を計算する。\n",
+    "- 高速版：[誤差逆伝播法](KasagoDL3.ipynb)で偏微分を近似し勾配を計算する。\n",
     "\n",
     "勾配によって更新した重みやバイアスを使用して、学習を繰り返す。"
    ]
