--- a/Notebook/Jupyter/path/KasagoDL3.ipynb
+++ b/Notebook/Jupyter/path/KasagoDL3.ipynb
@@ -16,9 +16,7 @@
     "## 参考\n",
     "- https://github.com/oreilly-japan/deep-learning-from-scratch/blob/master/notebooks/\n",
     "- [深層学習（deep learning） - 開発基盤部会 Wiki](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E6%B7%B1%E5%B1%A4%E5%AD%A6%E7%BF%92%EF%BC%88deep%20learning%EF%BC%89)  \n",
-    "&gt; [ニューラルネットワーク](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%8B%E3%83%A5%E3%83%BC%E3%83%A9%E3%83%AB%E3%83%8D%E3%83%83%E3%83%88%E3%83%AF%E3%83%BC%E3%82%AF)  \n",
-    "&gt; [ニューラルネットワーク（学習）](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%8B%E3%83%A5%E3%83%BC%E3%83%A9%E3%83%AB%E3%83%8D%E3%83%83%E3%83%88%E3%83%AF%E3%83%BC%E3%82%AF%EF%BC%88%E5%AD%A6%E7%BF%92%EF%BC%89)  \n",
-    "&gt; [深層学習の誤差逆伝播法](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E6%B7%B1%E5%B1%A4%E5%AD%A6%E7%BF%92%E3%81%AE%E8%AA%A4%E5%B7%AE%E9%80%86%E4%BC%9D%E6%92%AD%E6%B3%95)"
+    "&gt; [ニューラルネットワーク](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%8B%E3%83%A5%E3%83%BC%E3%83%A9%E3%83%AB%E3%83%8D%E3%83%83%E3%83%88%E3%83%AF%E3%83%BC%E3%82%AF) &gt; [ニューラルネットワーク（学習）](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%8B%E3%83%A5%E3%83%BC%E3%83%A9%E3%83%AB%E3%83%8D%E3%83%83%E3%83%88%E3%83%AF%E3%83%BC%E3%82%AF%EF%BC%88%E5%AD%A6%E7%BF%92%EF%BC%89) &gt; [深層学習の誤差逆伝播法](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E6%B7%B1%E5%B1%A4%E5%AD%A6%E7%BF%92%E3%81%AE%E8%AA%A4%E5%B7%AE%E9%80%86%E4%BC%9D%E6%92%AD%E6%B3%95)"
    ]
   },
   {
@@ -261,14 +259,20 @@
    },
    "source": [
     "#### ニューラルネットワークのレイヤの定義\n",
-    "ココではニューラルネットワーク用のレイヤの定義を行う。\n",
-    "- ここでのポイントは、\n",
-    "  - ニューラルネットワークを計算グラフと捉え逆伝播を計算すると、\n",
-    "  - (数値) 微分をせずに勾配 → 重みを計算できる点。\n",
-    "- backwardの出力は、\n",
-    "  - forwardの入力の重み変数に対する勾配になる。\n",
-    "  - 特に、forwardでは、最後に誤差関数を用いるため、  \n",
-    "  誤差を０にするような重みを求めるための勾配になる。\n",
+    "ココではニューラルネットワーク用のレイヤの定義を行う。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb0603ca-dee1-4c9a-8c61-fe5d6f0ba46f",
+   "metadata": {},
+   "source": [
+    "##### ここでのポイントは、\n",
+    "- ニューラルネットワークを計算グラフと捉え逆伝播を計算すると、\n",
+    "- (数値) 微分をせずに勾配 → 重みを計算できる点。\n",
+    "- backwardの出力は、forwardの入力の重み変数に対する勾配になる。\n",
+    "- 特にforwardでは、最後に誤差関数を用いるため、  \n",
+    "backwardは誤差を０にするような重みを求めるための勾配になる。\n",
     "- 従って、レイヤのクラスは以下のメソッドを持つ。\n",
     "  - \\_\\_init\\_\\_(self, ...\n",
     "  - def forward(self, ...\n",
@@ -501,7 +505,10 @@
     "t_batch = t_train[:3]\n",
     "\n",
     "# 数値微分と誤差逆伝播法で勾配算出\n",
+    "\n",
+    "## 数値微分\n",
     "grad_numerical = network.numerical_gradient(x_batch, t_batch)\n",
+    "## 誤差逆伝播法\n",
     "grad_backprop = network.gradient(x_batch, t_batch)\n",
     "\n",
     "# 算出した勾配の差を確認（コレを勾配確認と呼ぶ）\n",
