--- a/Notebook/Jupyter/path/MatplotlibTraining.ipynb
+++ b/Notebook/Jupyter/path/MatplotlibTraining.ipynb
@@ -26,6 +26,8 @@
     "    - [3次関数グラフ](#3次関数グラフ)\n",
     "    - [3角関数グラフ](#3角関数グラフ)\n",
     "  - [3次元プロット](#3次元のプロット)\n",
+    "    - [準備](#準備_)\n",
+    "    - [追加](#追加)\n",
     "  \n",
     "## 参考\n",
     "開発基盤部会 Wiki\n",
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "26a01b0f-f912-4c21-b3d4-3b75760c0be8",
    "metadata": {},
    "outputs": [],
@@ -396,12 +398,81 @@
    "cell_type": "markdown",
    "id": "20c13bf7-c3a3-4e74-a7fa-f8aeb29ed9b3",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
     "#### パレート図\n",
     "結構手数が要る。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a356b2ef-0b28-4b24-8295-7ad1b83d4daa",
+   "metadata": {},
+   "source": [
+    "##### データ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68f2d5fe-3700-4fd4-ad55-64c0c2286dda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ラベル\n",
+    "labels = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']\n",
+    "# 値\n",
+    "values = [100, 90, 80, 70, 60 ,50, 40, 30, 20, 10]\n",
+    " \n",
+    "# データ操作用\n",
+    "df = pd.DataFrame({\"label\": labels, \"value\": values}, columns=[\"label\", \"value\"])\n",
+    "# 「値」の降順にデータを並び替える\n",
+    "df = df.sort_values(by=\"value\", ascending=False)\n",
+    "# 累積和を求める\n",
+    "df[\"accum\"] = np.cumsum(df[\"value\"])\n",
+    "# 比率の累計を求める\n",
+    "df[\"accum_percent\"] = df[\"accum\"] / sum(df[\"value\"]) * 100\n",
+    "# データ数のカウント\n",
+    "data_num = len(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62120899-93ca-408b-87ac-28ae27d41855",
+   "metadata": {},
+   "source": [
+    "##### 表示"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b17f9fdf-622b-4499-8444-f1daac61ce76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# グラフの土台\n",
+    "fig = plt.figure()\n",
+    "\n",
+    "# グラフ１\n",
+    "# ax = fig.add_subplot(111)\n",
+    "ax = plt.subplot(1, 1, 1)\n",
+    "\n",
+    "# グラフ２（y軸共有、x軸が右側）\n",
+    "ax_add = ax.twinx()\n",
+    " \n",
+    "# 棒グラフの描画\n",
+    "ax.bar(range(data_num), df[\"value\"])\n",
+    "ax.set_xticks(range(data_num))\n",
+    "ax.set_xticklabels(df[\"label\"].tolist())\n",
+    "ax.set_xlabel(\"Label\")\n",
+    "ax.set_ylabel(\"Frequency of occurrence\")\n",
+    "\n",
+    "# 折れ線グラフの描画\n",
+    "ax_add.plot(range(data_num), df[\"accum_percent\"])\n",
+    "ax_add.set_ylim([0, 100])\n",
+    "ax_add.set_ylabel(\"cumulative percentage\")"
    ]
   },
   {
@@ -972,7 +1043,7 @@
     "tags": []
    },
    "source": [
-    "#### 準備\n",
+    "#### 準備_\n",
     "インポート"
    ]
   },
