--- a/Notebook/Jupyter/path/NumPyTraining1.ipynb
+++ b/Notebook/Jupyter/path/NumPyTraining1.ipynb
@@ -356,7 +356,8 @@
     "tags": []
    },
    "source": [
-    "##### type (型"
+    "##### type\n",
+    "変数のデータ型"
    ]
   },
   {
@@ -374,7 +375,8 @@
    "id": "744b1421-2787-4657-bd50-dcdcfc3d38f5",
    "metadata": {},
    "source": [
-    "##### dtype (列要素のデータ型"
+    "##### dtype\n",
+    "要素のデータ型"
    ]
   },
   {
@@ -392,7 +394,8 @@
    "id": "8bec62c3-ff55-4956-962a-1acca051516f",
    "metadata": {},
    "source": [
-    "##### ndim (配列の次元は１次元"
+    "##### ndim\n",
+    "配列の次元は１次元"
    ]
   },
   {
@@ -410,7 +413,8 @@
    "id": "70f8ac17-adad-401f-8a35-dcb39b8c4437",
    "metadata": {},
    "source": [
-    "##### shape (次元の形状"
+    "##### shape\n",
+    "次元の形状"
    ]
   },
   {
@@ -428,7 +432,8 @@
    "id": "8d5702f3-8f6f-483e-9207-7ed1858b563f",
    "metadata": {},
    "source": [
-    "##### shape[n] (次元の要素数"
+    "##### shape[n]\n",
+    "ｎ次元の要素数"
    ]
   },
   {
@@ -814,7 +819,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d375c90b-3501-4241-97ad-2f5564c38700",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "a[1]"
