--- a/Notebook/Jupyter/path/NumPyTraining2.ipynb
+++ b/Notebook/Jupyter/path/NumPyTraining2.ipynb
@@ -245,7 +245,8 @@
    "id": "1cde70ee-4584-4c95-8b53-701f2c029ea7",
    "metadata": {},
    "source": [
-    "##### dtype (列要素のデータ型"
+    "##### dtype\n",
+    "要素のデータ型"
    ]
   },
   {
@@ -263,7 +264,8 @@
    "id": "5dbe33ad-e398-497c-9e2d-9b4a02d14d4d",
    "metadata": {},
    "source": [
-    "##### ndim (行列の次元は２次元"
+    "##### ndim\n",
+    "行列の次元は２次元"
    ]
   },
   {
@@ -281,7 +283,8 @@
    "id": "2ed2cc90-a44d-42f9-9f77-114bda3408a3",
    "metadata": {},
    "source": [
-    "##### shape (次元の形状 (行, 列"
+    "##### shape\n",
+    "次元の形状 (行数, 列数"
    ]
   },
   {
@@ -299,7 +302,8 @@
    "id": "55f76598-5880-4f01-b9c8-058a7689ede1",
    "metadata": {},
    "source": [
-    "##### shape[n] (次元の要素数 (行の数"
+    "##### shape[n] \n",
+    "ｎ次元の要素数（０：行数、１：列数"
    ]
   },
   {
@@ -563,7 +567,9 @@
   {
    "cell_type": "markdown",
    "id": "0c12a184-d7b2-4481-877a-d25cdc0761c3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### 準備"
    ]
@@ -603,7 +609,7 @@
    "id": "45038695-58d1-4792-95f6-fa6fc20da338",
    "metadata": {},
    "source": [
-    "##### N次配列にN個のインデックスを指定すると要素が取り出せる。"
+    "##### N次元配列にN個のインデックスを指定すると要素が取り出せる。"
    ]
   },
   {
@@ -621,7 +627,7 @@
    "id": "2a6c5b62-17a3-4713-b00f-76df8d00974a",
    "metadata": {},
    "source": [
-    "##### N次配列にX個のインデックスを指定するとN-X次配列が取り出せる。"
+    "##### N次元配列にX個のインデックスを指定するとN-X次元配列が取り出せる。"
    ]
   },
   {
@@ -631,7 +637,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b[0]    # 0行"
+    "b[0]    # 0行の行ベクトル"
    ]
   },
   {
