--- a/Notebook/Jupyter/path/ScikitLearnTraining0.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining0.ipynb
@@ -565,7 +565,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://archive.ics.uci.edu/ml/machine-learning-databases/wine-quality/winequality-red.csv'\n",
+    "url = 'https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?plugin=attach&pcmd=open&file=winequality-red.csv&refer=FrontPage'\n",
     "res = requests.get(url) # , verify=False, proxies=proxies) # プロキシ\n",
     "df = pd.read_csv(io.BytesIO(res.content), encoding='shift-jis', sep=\";\")\n",
     "df"
@@ -951,7 +951,7 @@
    "source": [
     "##### 標準化・正規化\n",
     "DFでやる方法とNPでやる方法があるが、\n",
-    "[説明変数と目的変数の切出](#説明変数と目的変数の切出)基本NPでやる。"
+    "[説明変数と目的変数の選択・分割](#説明変数・目的変数の選択・分割)の後なので基本NPでやる。"
    ]
   },
   {
@@ -1112,7 +1112,7 @@
     "tags": []
    },
    "source": [
-    "###### [交差検証法](ScikitLearnTraining5.ipynb)"
+    "###### 交差検証法については[コチラ](ScikitLearnTraining5.ipynb)"
    ]
   }
  ],
