--- a/Notebook/Jupyter/path/ScikitLearnTraining1.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining1.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "24619bb6-3eac-4e69-90ab-3fe1b88a459c",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,9 @@
   {
    "cell_type": "markdown",
    "id": "67ed7ff0-4a56-41a6-a37c-20ea6737a76d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### データ"
    ]
@@ -337,17 +339,11 @@
   {
    "cell_type": "markdown",
    "id": "1873286f-5e9b-4605-8e4c-503771e6ac75",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### モデリング"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "211248e3-2ab6-4947-ba89-480f1b99669c",
-   "metadata": {},
-   "source": [
-    "##### 実行"
    ]
   },
   {
@@ -355,7 +351,7 @@
    "id": "250e78de-9e58-429d-8178-0a8003ccb8f2",
    "metadata": {},
    "source": [
-    "###### 学習\n",
+    "##### 学習\n",
     "※ fitは多変量に対応しているので二次元配列であること。"
    ]
   },
@@ -384,7 +380,7 @@
    "id": "a88f4759-9ef0-4423-a3d9-ca291643a75c",
    "metadata": {},
    "source": [
-    "###### 推論\n",
+    "##### 推論\n",
     "※ predictは多変量に対応しているので二次元配列であること。"
    ]
   },
@@ -409,7 +405,7 @@
    "id": "9a2dc3ba-4d01-407a-8e80-9ac71f5f96ac",
    "metadata": {},
    "source": [
-    "##### 評価"
+    "#### 評価"
    ]
   },
   {
@@ -417,7 +413,7 @@
    "id": "c45619a2-6dd6-4598-b349-b29596c4648e",
    "metadata": {},
    "source": [
-    "###### 回帰直線\n",
+    "##### 回帰直線\n",
     "y = lr.coef_[0] * x + lr.intercept_"
    ]
   },
@@ -437,7 +433,7 @@
    "id": "31a44888-68f1-412e-a88d-b761c215bfda",
    "metadata": {},
    "source": [
-    "###### 決定係数（R2乗値）\n",
+    "##### 決定係数（R2乗値）\n",
     "絶対的な基準でないが0.5以上であれば適合度が高い"
    ]
   },
@@ -458,7 +454,7 @@
    "id": "6bd22b02-5c9d-4d5e-b896-de895c6fe3f7",
    "metadata": {},
    "source": [
-    "###### 散布図に回帰直線を追加"
+    "##### 散布図に回帰直線を追加"
    ]
   },
   {
@@ -719,18 +715,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7cda89e-ad9d-49cb-bf51-303dc3a751a1",
-   "metadata": {},
-   "source": [
-    "##### 実行"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "3f918638-d32c-411b-9c61-1daaea4b1f31",
    "metadata": {},
    "source": [
-    "###### 学習"
+    "##### 学習"
    ]
   },
   {
@@ -749,7 +737,7 @@
    "id": "dc2944a3-ce1a-4341-8abf-07f8d8297ff2",
    "metadata": {},
    "source": [
-    "###### 推論\n",
+    "##### 推論\n",
     "※ predictは多変量に対応しているので二次元配列であること。"
    ]
   },
@@ -776,7 +764,7 @@
     "tags": []
    },
    "source": [
-    "##### 評価"
+    "#### 評価"
    ]
   },
   {
@@ -784,7 +772,7 @@
    "id": "79f3e886-ca77-4e95-b339-e0def03d0a03",
    "metadata": {},
    "source": [
-    "###### 重回帰超平面\n",
+    "##### 重回帰超平面\n",
     "- y = lr.coef_[0] * x1 + lr.coef_[1] * x2 * ... + lr.intercept_\n",
     "- 偏回帰係数は、\n",
     "  - データの標準化を施してあれば、追加の特徴量エンジニアリングで参考にできる。\n",
@@ -807,7 +795,7 @@
    "id": "6d071fed-2634-4161-9158-62e1ab205f6b",
    "metadata": {},
    "source": [
-    "###### 決定係数（R2乗値）\n",
+    "##### 決定係数（R2乗値）\n",
     "絶対的な基準でないが0.5以上であれば適合度が高い"
    ]
   },
@@ -828,7 +816,7 @@
    "id": "3df15e8f-98b9-4f01-a060-e6658892e451",
    "metadata": {},
    "source": [
-    "###### 自由度調整済み決定係数（R2乗値）"
+    "##### 自由度調整済み決定係数（R2乗値）"
    ]
   },
   {
@@ -851,7 +839,7 @@
    "id": "5ef8c175-561e-46be-a2bf-690d7be5d179",
    "metadata": {},
    "source": [
-    "###### [スコアを表示](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%87%E3%83%BC%E3%82%BF%E3%83%9E%E3%82%A4%E3%83%8B%E3%83%B3%E3%82%B0%EF%BC%88DM%EF%BC%89-%20CRISP-DM#uf759972)\n",
+    "##### [スコアを表示](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%87%E3%83%BC%E3%82%BF%E3%83%9E%E3%82%A4%E3%83%8B%E3%83%B3%E3%82%B0%EF%BC%88DM%EF%BC%89-%20CRISP-DM#uf759972)\n",
     "- 平均二乗誤差（MSE：Mean Squared Error）\n",
     "- 誤差の標準偏差（RMSE : Root Mean Squared Error）"
    ]
@@ -877,7 +865,7 @@
    "id": "3894005d-2bc6-47c0-82da-36b8e20fa42e",
    "metadata": {},
    "source": [
-    "###### 重回帰超平面の可視化\n",
+    "##### 重回帰超平面の可視化\n",
     "ただし、説明変数が２変数まで。"
    ]
   },
@@ -919,7 +907,7 @@
    "id": "a43f22c5-4118-416f-b115-b8b9e52efc4e",
    "metadata": {},
    "source": [
-    "###### 残差プロットを行う。\n",
+    "##### 残差プロットを行う。\n",
     "- 説明変数が３変数以上でも適用できる。\n",
     "- 参考：https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%87%E3%83%BC%E3%82%BF%E3%83%9E%E3%82%A4%E3%83%8B%E3%83%B3%E3%82%B0%EF%BC%88DM%EF%BC%89-%20CRISP-DM#i3d85f2b"
    ]
