--- a/Notebook/Jupyter/path/ScikitLearnTraining2.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining2.ipynb
@@ -136,6 +136,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0d9e33d1-b80c-4f54-aa05-7c54c5b0b68d",
+   "metadata": {},
+   "source": [
+    "#### 自由度調整済み決定係数（R2乗値）の関数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01b8ce05-6d9c-4057-af21-862b6705d733",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def adjusted(score, n_sample, n_explanatory_variables):\n",
+    "    adjusted_score = 1 - (1 - score) * ((n_sample - 1) / (n_sample - n_explanatory_variables - 1))\n",
+    "    return adjusted_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d6825925-6cdd-43be-8aa1-2ebfb1b03f89",
    "metadata": {},
    "source": [
@@ -191,7 +211,9 @@
   {
    "cell_type": "markdown",
    "id": "f0b66053-a9a1-49e4-a105-171e44932cbd",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### データ"
    ]
@@ -308,17 +330,11 @@
   {
    "cell_type": "markdown",
    "id": "87f230a9-5416-4a79-a457-eb2e8f1a2d17",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### モデリング"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a0a4c983-ba32-455d-a8cc-c6effc00624c",
-   "metadata": {},
-   "source": [
-    "##### 実行"
    ]
   },
   {
@@ -326,7 +342,15 @@
    "id": "ed3f5705-3cf1-4b7d-9451-50d02b2a997d",
    "metadata": {},
    "source": [
-    "###### 学習"
+    "##### 学習"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad311691-bc59-4cde-8230-a6c1c9f3d8dc",
+   "metadata": {},
+   "source": [
+    "##### １次関数"
    ]
   },
   {
@@ -342,6 +366,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dd04d96f-b131-4ceb-bfe2-5bd66e3edc63",
+   "metadata": {},
+   "source": [
+    "##### ２次関数"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0c148e36-11c7-4271-b53e-1c6b7e60c677",
@@ -351,6 +383,14 @@
     "# x_train_quadで、model_quadを学習\n",
     "model_quad = LinearRegression()\n",
     "model_quad.fit(x_train_quad, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d7e8bc1-e840-4e12-ac0f-5e962a74f78a",
+   "metadata": {},
+   "source": [
+    "##### ３次関数"
    ]
   },
   {
@@ -370,8 +410,16 @@
    "id": "8100cf04-15b6-4f5a-98d8-185955e53f97",
    "metadata": {},
    "source": [
-    "###### 推論\n",
+    "##### 推論\n",
     "※ predictは多変量に対応しているので二次元配列であること。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14602a33-afe7-4b90-b317-8cd9435354e8",
+   "metadata": {},
+   "source": [
+    "##### １次関数"
    ]
   },
   {
@@ -391,6 +439,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d3ea7bf-976f-4d0e-aff5-2ccf8ba64a47",
+   "metadata": {},
+   "source": [
+    "##### ２次関数"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e6f05215-0abf-4cd1-8cbd-4a2ed4c3a88e",
@@ -404,6 +460,14 @@
     "print('answer = ', y_test[index])\n",
     "print('pred = ', pred_val[0])\n",
     "print('ratio : %.2f' % ratio_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b97eba3-6640-431f-bcbc-4e86d7781db9",
+   "metadata": {},
+   "source": [
+    "##### ３次関数"
    ]
   },
   {
@@ -427,7 +491,7 @@
    "id": "a1fb8cc0-3327-460f-85da-68ad5c0f4f4d",
    "metadata": {},
    "source": [
-    "##### 評価"
+    "#### 評価"
    ]
   },
   {
@@ -435,7 +499,53 @@
    "id": "5dd236c0-a9c7-4fd5-84f7-926ac0ccb886",
    "metadata": {},
    "source": [
-    "###### 自由度調整済み決定係数（R2乗値）"
+    "##### 自由度調整済み決定係数（R2乗値）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7409b541-c92a-49cd-9a7a-28cf115eac80",
+   "metadata": {},
+   "source": [
+    "###### １次関数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "170715cd-da94-4eef-bb76-ddd878feaa41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('train: %.3f' % adjusted(model_lin.score(x_train_lin, y_train), len(y_train), x_train_lin.shape[1]))\n",
+    "print('test : %.3f' % adjusted(model_lin.score(x_test_lin, y_test), len(y_test), x_test_lin.shape[1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e358af03-8ea3-4fa9-9dfe-74b1f85918ce",
+   "metadata": {},
+   "source": [
+    "###### ２次関数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9179609b-1d0c-4278-9e47-43f4579d5966",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('train: %.3f' % adjusted(model_quad.score(x_train_quad, y_train), len(y_train), x_train_quad.shape[1]))\n",
+    "print('test : %.3f' % adjusted(model_quad.score(x_test_quad, y_test), len(y_test), x_test_quad.shape[1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dca6b0c3-1655-413d-91e5-852b7757c670",
+   "metadata": {},
+   "source": [
+    "###### ３次関数"
    ]
   },
   {
@@ -445,17 +555,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def adjusted(score, n_sample, n_explanatory_variables):\n",
-    "    adjusted_score = 1 - (1 - score) * ((n_sample - 1) / (n_sample - n_explanatory_variables - 1))\n",
-    "    return adjusted_score\n",
-    "\n",
-    "print(\"lin\")\n",
-    "print('train: %.3f' % adjusted(model_lin.score(x_train_lin, y_train), len(y_train), x_train_lin.shape[1]))\n",
-    "print('test : %.3f' % adjusted(model_lin.score(x_test_lin, y_test), len(y_test), x_test_lin.shape[1]))\n",
-    "print(\"quad\")\n",
-    "print('train: %.3f' % adjusted(model_quad.score(x_train_quad, y_train), len(y_train), x_train_quad.shape[1]))\n",
-    "print('test : %.3f' % adjusted(model_quad.score(x_test_quad, y_test), len(y_test), x_test_quad.shape[1]))\n",
-    "print(\"cubic\")\n",
     "print('train: %.3f' % adjusted(model_cubic.score(x_train_cubic, y_train), len(y_train), x_train_cubic.shape[1]))\n",
     "print('test : %.3f' % adjusted(model_cubic.score(x_test_cubic, y_test), len(y_test), x_test_cubic.shape[1]))"
    ]
@@ -465,9 +564,65 @@
    "id": "105bb1fa-99a7-4134-86f8-092e0b87380d",
    "metadata": {},
    "source": [
-    "###### [スコアを表示](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%87%E3%83%BC%E3%82%BF%E3%83%9E%E3%82%A4%E3%83%8B%E3%83%B3%E3%82%B0%EF%BC%88DM%EF%BC%89-%20CRISP-DM#uf759972)\n",
+    "##### [スコアを表示](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%87%E3%83%BC%E3%82%BF%E3%83%9E%E3%82%A4%E3%83%8B%E3%83%B3%E3%82%B0%EF%BC%88DM%EF%BC%89-%20CRISP-DM#uf759972)\n",
     "- 平均二乗誤差（MSE：Mean Squared Error）\n",
     "- 誤差の標準偏差（RMSE : Root Mean Squared Error）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00fe932f-e264-4c51-80f9-b7592af6fcb1",
+   "metadata": {},
+   "source": [
+    "###### １次関数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6ea4b91-93a1-435c-a409-f72a94322da9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lin_train_mse = mse(y_train, model_lin.predict(x_train_lin))\n",
+    "lin_test_mse = mse(y_test, model_lin.predict(x_test_lin))\n",
+    "\n",
+    "print('lin_train_mse: %.3f' % lin_train_mse)\n",
+    "print('lin_test_mse: %.3f' % lin_test_mse)\n",
+    "print('lin_train_rmse: %.3f' % (lin_train_mse ** (1/2)))\n",
+    "print('lin_test_rmse : %.3f' % (lin_test_mse ** (1/2)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10d3e859-9249-4f90-af67-5afa4010b987",
+   "metadata": {},
+   "source": [
+    "###### ２次関数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58c5f730-11b0-4dc0-a7cd-1cff219bb3ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quad_train_mse = mse(y_train, model_quad.predict(x_train_quad))\n",
+    "quad_test_mse = mse(y_test, model_quad.predict(x_test_quad))\n",
+    "\n",
+    "print('quad_train_mse: %.3f' % quad_train_mse)\n",
+    "print('quad_test_mse: %.3f' % quad_test_mse)\n",
+    "print('quad_train_rmse: %.3f' % (quad_train_mse ** (1/2)))\n",
+    "print('quad_test_rmse : %.3f' % (quad_test_mse ** (1/2)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e733646b-eee2-4e9b-b945-415721fb5052",
+   "metadata": {},
+   "source": [
+    "###### ３次関数"
    ]
   },
   {
@@ -477,28 +632,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lin_train_mse = mse(y_train, model_lin.predict(x_train_lin))\n",
-    "lin_test_mse = mse(y_test, model_lin.predict(x_test_lin))\n",
-    "\n",
-    "print('<lin>')\n",
-    "print('lin_train_mse: %.3f' % lin_train_mse)\n",
-    "print('lin_test_mse: %.3f' % lin_test_mse)\n",
-    "print('lin_train_rmse: %.3f' % (lin_train_mse ** (1/2)))\n",
-    "print('lin_test_rmse : %.3f' % (lin_test_mse ** (1/2)))\n",
-    "\n",
-    "quad_train_mse = mse(y_train, model_quad.predict(x_train_quad))\n",
-    "quad_test_mse = mse(y_test, model_quad.predict(x_test_quad))\n",
-    "\n",
-    "print('<quad>')\n",
-    "print('quad_train_mse: %.3f' % lin_train_mse)\n",
-    "print('quad_test_mse: %.3f' % lin_test_mse)\n",
-    "print('quad_train_rmse: %.3f' % (lin_train_mse ** (1/2)))\n",
-    "print('quad_test_rmse : %.3f' % (lin_test_mse ** (1/2)))\n",
-    "\n",
     "cubic_train_mse = mse(y_train, model_cubic.predict(x_train_cubic))\n",
     "cubic_test_mse = mse(y_test, model_cubic.predict(x_test_cubic))\n",
     "\n",
-    "print('<cubic>')\n",
     "print('cubic_train_mse: %.3f' % cubic_train_mse)\n",
     "print('cubic_test_mse: %.3f' % cubic_test_mse)\n",
     "print('cubic_train_rmse: %.3f' % (cubic_train_mse ** (1/2)))\n",
@@ -510,9 +646,17 @@
    "id": "bc881888-c463-415f-bb2d-3fcb2d95ba38",
    "metadata": {},
    "source": [
-    "###### 残差プロットを行う。\n",
+    "##### 残差プロットを行う。\n",
     "- 説明変数が３変数以上でも適用できる。\n",
     "- 参考：https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%87%E3%83%BC%E3%82%BF%E3%83%9E%E3%82%A4%E3%83%8B%E3%83%B3%E3%82%B0%EF%BC%88DM%EF%BC%89-%20CRISP-DM#i3d85f2b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32d8e039-3467-4223-93ec-f644af90fcf8",
+   "metadata": {},
+   "source": [
+    "###### １次関数"
    ]
   },
   {
@@ -527,6 +671,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fe54a832-d477-42d5-9db1-55d000fd3ba2",
+   "metadata": {},
+   "source": [
+    "###### ２次関数"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7e228b79-6311-46f0-8a51-29f0bc920154",
@@ -535,6 +687,14 @@
    "source": [
     "# 残差プロットを出力\n",
     "res_plot(y_train, model_quad.predict(x_train_quad), y_test, model_quad.predict(x_test_quad))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "079ca8c7-cce1-47a7-865f-aaa531b9b31b",
+   "metadata": {},
+   "source": [
+    "###### ３次関数"
    ]
   },
   {
@@ -564,7 +724,9 @@
   {
    "cell_type": "markdown",
    "id": "85995891-1111-4da6-a8e0-4364126fb6c7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### データ"
    ]
@@ -735,17 +897,11 @@
   {
    "cell_type": "markdown",
    "id": "2a19578f-e9fc-45d5-bec1-c445ced14669",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### モデリング"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1f37a0c7-250b-4b51-a8ff-0b3d9e03e201",
-   "metadata": {},
-   "source": [
-    "##### 実行"
    ]
   },
   {
@@ -753,8 +909,16 @@
    "id": "888af79d-be99-47a4-8665-adf4f326e29d",
    "metadata": {},
    "source": [
-    "###### 学習\n",
+    "##### 学習\n",
     "多項式回帰の次数を上げて過学習させ、それを正則化回帰で抑止してみる。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fc741e2-a182-4d42-90b7-b9d86ccdacb7",
+   "metadata": {},
+   "source": [
+    "###### LinearRegression"
    ]
   },
   {
@@ -769,15 +933,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "33308978-4fb8-45ec-8170-a288acaa5ebe",
+   "metadata": {},
+   "source": [
+    "###### Ridge"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c067dfc8-5406-40d0-921e-d3d776c13f1a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Ridge\n",
     "model_ridge = Ridge(alpha=1000)\n",
     "model_ridge.fit(x_train_septic, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1ac1907-a752-45b8-8627-8c00bb30127b",
+   "metadata": {},
+   "source": [
+    "###### Lasso"
    ]
   },
   {
@@ -787,9 +966,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Lasso\n",
     "model_lasso = Lasso(alpha=1000)\n",
     "model_lasso.fit(x_train_septic, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be5683d2-5d8e-489f-a5b1-4da524e7d7a5",
+   "metadata": {},
+   "source": [
+    "###### ElasticNet"
    ]
   },
   {
@@ -799,7 +985,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ElasticNet\n",
     "model_en= ElasticNet(alpha=1000, l1_ratio=0.9)\n",
     "model_en.fit(x_train_septic, y_train)"
    ]
@@ -809,7 +994,7 @@
    "id": "ee297afb-a749-4e6c-98ca-a9fd505712d2",
    "metadata": {},
    "source": [
-    "###### 推論"
+    "##### 推論"
    ]
   },
   {
@@ -834,7 +1019,7 @@
    "id": "c56d80d2-86d9-4d4e-b729-8981ef55a116",
    "metadata": {},
    "source": [
-    "##### 評価"
+    "#### 評価"
    ]
   },
   {
@@ -842,7 +1027,7 @@
    "id": "bfe4b4a3-a452-42d3-9d3c-8c37d481a87b",
    "metadata": {},
    "source": [
-    "###### グラフへ描画"
+    "##### グラフへ描画"
    ]
   },
   {
@@ -876,7 +1061,15 @@
    "id": "c3cdf399-0648-4948-b542-c82f372cd26e",
    "metadata": {},
    "source": [
-    "###### 自由度調整済み決定係数（R2乗値）"
+    "##### 自由度調整済み決定係数（R2乗値）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "253d782c-378b-488f-ac72-d723b2ae75b6",
+   "metadata": {},
+   "source": [
+    "###### LinearRegression"
    ]
   },
   {
@@ -889,9 +1082,17 @@
     "print('<septic train>')\n",
     "print('R^2: %.3f' % model_septic.score(x_train_septic, y_train))\n",
     "print('adjusted R^2: %.3f' % adjusted(model_septic.score(x_train_septic, y_train), len(y_train), 7))\n",
-    "print('septic test')\n",
+    "print('<septic test>')\n",
     "print('R^2: %.3f' % model_septic.score(x_test_septic, y_test))\n",
     "print('adjusted R^2: %.3f' % adjusted(model_septic.score(x_test_septic, y_test), len(y_train), 7))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c06f2244-4ba9-4624-89b3-85023e941e97",
+   "metadata": {},
+   "source": [
+    "###### Ridge"
    ]
   },
   {
@@ -904,9 +1105,17 @@
     "print('<ridge train>')\n",
     "print('R^2: %.3f' % model_ridge.score(x_train_septic, y_train))\n",
     "print('adjusted R^2: %.3f' % adjusted(model_ridge.score(x_train_septic, y_train), len(y_train), 7))\n",
-    "print('septic test')\n",
+    "print('<ridge test>')\n",
     "print('R^2: %.3f' % model_ridge.score(x_test_septic, y_test))\n",
     "print('adjusted R^2: %.3f' % adjusted(model_ridge.score(x_test_septic, y_test), len(y_train), 7))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e22b3b0-a988-4866-96e8-948a33233317",
+   "metadata": {},
+   "source": [
+    "###### Lasso"
    ]
   },
   {
@@ -919,9 +1128,17 @@
     "print('<lasso train>')\n",
     "print('R^2: %.3f' % model_lasso.score(x_train_septic, y_train))\n",
     "print('adjusted R^2: %.3f' % adjusted(model_lasso.score(x_train_septic, y_train), len(y_train), 7))\n",
-    "print('septic test')\n",
+    "print('<lasso test>')\n",
     "print('R^2: %.3f' % model_lasso.score(x_test_septic, y_test))\n",
     "print('adjusted R^2: %.3f' % adjusted(model_lasso.score(x_test_septic, y_test), len(y_train), 7))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7565c127-bbfd-40a2-80c4-8ef512a6ad74",
+   "metadata": {},
+   "source": [
+    "###### ElasticNet"
    ]
   },
   {
@@ -931,10 +1148,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('<ElasticNet train>')\n",
+    "print('<en train>')\n",
     "print('R^2: %.3f' % model_en.score(x_train_septic, y_train))\n",
     "print('adjusted R^2: %.3f' % adjusted(model_en.score(x_train_septic, y_train), len(y_train), 7))\n",
-    "print('septic test')\n",
+    "print('<en test>')\n",
     "print('R^2: %.3f' % model_en.score(x_test_septic, y_test))\n",
     "print('adjusted R^2: %.3f' % adjusted(model_en.score(x_test_septic, y_test), len(y_train), 7))"
    ]
@@ -944,7 +1161,15 @@
    "id": "dd7727a7-39a7-494a-81a8-b8900ae5f59c",
    "metadata": {},
    "source": [
-    "###### 確認（次元削減、ノルムの縮小"
+    "##### 確認（次元削減、ノルムの縮小"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b558424-c4fb-4ff1-a92b-c3884e3518e8",
+   "metadata": {},
+   "source": [
+    "###### LinearRegression"
    ]
   },
   {
@@ -954,7 +1179,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# septic（正則化なし）\n",
     "# 重み\n",
     "print(\"model_septic.coef_:\", model_septic.coef_)\n",
     "# L2ノルム\n",
@@ -964,13 +1188,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0ee45d2e-1c3d-4968-84cb-78f325336647",
+   "metadata": {},
+   "source": [
+    "###### Ridge"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e197c93d-d691-44d9-bbcf-1a9a9146a3c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# <ridge>\n",
     "# 重み\n",
     "print(\"model_ridge.coef_:\", model_ridge.coef_) # 次元削減の確認\n",
     "# L2ノルム\n",
@@ -980,13 +1211,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a8ed414c-7062-4ab8-a7bb-7b06dc277a5e",
+   "metadata": {},
+   "source": [
+    "###### Lasso"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f8845571-9eaa-4df0-b15b-dcc5b88a0207",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# <lasso>\n",
     "# 重み\n",
     "print(\"model_lasso.coef_:\", model_lasso.coef_) # 次元削減の確認\n",
     "# L2ノルム\n",
@@ -996,13 +1234,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b25796f5-1c8c-450c-a3a6-a712b881f91f",
+   "metadata": {},
+   "source": [
+    "###### ElasticNet"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ad4e1b7f-3314-4d01-8888-9103d8a2cea4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# <ElasticNet>\n",
     "# 重み\n",
     "print(\"model_en.coef_:\", model_en.coef_) # 次元削減の確認\n",
     "# L2ノルム\n",
