--- a/Notebook/Jupyter/path/ScikitLearnTraining3.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining3.ipynb
@@ -200,7 +200,9 @@
   {
    "cell_type": "markdown",
    "id": "414fc960-c790-4116-b5c2-93aa65182fe8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### 準備"
    ]
@@ -318,7 +320,7 @@
    "id": "acf08915-61df-48f3-9031-14aec5b6eb9d",
    "metadata": {},
    "source": [
-    "#### [データ](共通的データ処理)"
+    "#### [データ](#共通的データ処理)"
    ]
   },
   {
@@ -328,7 +330,7 @@
     "tags": []
    },
    "source": [
-    "#### 実行"
+    "#### モデリング"
    ]
   },
   {
@@ -441,7 +443,7 @@
    "id": "a950aae9-3544-4d2a-b87c-dbb47e27fbdd",
    "metadata": {},
    "source": [
-    "#### [データ](共通的データ処理)"
+    "#### [データ](#共通的データ処理)"
    ]
   },
   {
@@ -451,7 +453,7 @@
     "tags": []
    },
    "source": [
-    "#### 実行"
+    "#### モデリング"
    ]
   },
   {
@@ -534,16 +536,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6e473930-ada5-4d6c-8111-af2bc46eeb16",
+   "metadata": {},
+   "source": [
+    "###### 通常"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8df0f4bd-9b06-4cb1-a94f-1ae6153880cf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 通常\n",
     "index = 10\n",
     "print('answer : %d' % y_test[index][0])\n",
     "print('predict: %d' % svc.predict([x_test[index]])[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7f2f7b0-0ef2-4e91-b137-99ae454d3f88",
+   "metadata": {},
+   "source": [
+    "###### スラック変数の導入（誤分類を許容）"
    ]
   },
   {
@@ -553,10 +570,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# スラック変数の導入（誤分類を許容）\n",
     "index = 10\n",
     "print('answer : %d' % y_test[index][0])\n",
     "print('predict: %d' % svc1.predict([x_test[index]])[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95afecca-cd85-41f6-b1d1-c7d1754f9cb5",
+   "metadata": {},
+   "source": [
+    "###### カーネル法の導入（非線形対応）"
    ]
   },
   {
@@ -566,7 +590,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# カーネル法の導入（非線形対応）\n",
     "index = 10\n",
     "print('answer : %d' % y_test[index][0])\n",
     "print('predict: %d' % svc2.predict([x_test[index]])[0])"
@@ -593,15 +616,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "30af6044-451a-40c7-8eec-a4b2b98ef43b",
+   "metadata": {},
+   "source": [
+    "###### 通常"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "15e88d86-5114-42ce-84d3-c96c283ddd0c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 通常\n",
     "print('train acc: %.3f' % svc.score(x_train, y_train))\n",
     "print('test acc: %.3f' % svc.score(x_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "122a6e09-bd7a-4d2d-96be-2061838b8c46",
+   "metadata": {},
+   "source": [
+    "###### スラック変数の導入（誤分類を許容）"
    ]
   },
   {
@@ -611,9 +649,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# スラック変数の導入（誤分類を許容）\n",
     "print('train acc: %.3f' % svc1.score(x_train, y_train))\n",
     "print('test acc: %.3f' % svc1.score(x_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e535db57-2218-438c-8eb9-a519b96a7604",
+   "metadata": {},
+   "source": [
+    "###### カーネル法の導入（非線形対応）"
    ]
   },
   {
@@ -623,7 +668,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# カーネル法の導入（非線形対応）\n",
     "print('train acc: %.3f' % svc2.score(x_train, y_train))\n",
     "print('test acc: %.3f' % svc2.score(x_test, y_test))"
    ]
@@ -639,13 +683,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "43bfdd0d-7b24-4135-9980-dfe91d2d3adf",
+   "metadata": {},
+   "source": [
+    "###### 通常"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "847c7e11-14f9-4336-9d16-06148b89489e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 通常\n",
     "plot_decision_regions(x_std, y.flatten(), svc)\n",
     "plt.xlabel(\"PetalLengthCm\")\n",
     "plt.ylabel(\"PetalWidthCm\")\n",
@@ -655,13 +706,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9e3f8bb4-2842-43d1-8297-b0732650f72b",
+   "metadata": {},
+   "source": [
+    "###### スラック変数の導入（誤分類を許容）"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "aa0669ab-008f-4dba-9a74-63b6ad2cf5a3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# スラック変数の導入（誤分類を許容）\n",
     "plot_decision_regions(x_std, y.flatten(), svc1)\n",
     "plt.xlabel(\"PetalLengthCm\")\n",
     "plt.ylabel(\"PetalWidthCm\")\n",
@@ -671,13 +729,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2fadaa3c-1784-4eea-adc4-19abf3af6b70",
+   "metadata": {},
+   "source": [
+    "###### カーネル法の導入（非線形対応）"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e518741c-48a4-4307-b30a-e79bb47f0c35",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# カーネル法の導入（非線形対応）\n",
     "plot_decision_regions(x_std, y.flatten(), svc2)\n",
     "plt.xlabel(\"PetalLengthCm\")\n",
     "plt.ylabel(\"PetalWidthCm\")\n",
@@ -800,7 +865,7 @@
    "id": "25691e77-fcc8-44cb-817f-f94850cedaf3",
    "metadata": {},
    "source": [
-    "#### [データ](共通的データ処理)"
+    "#### [データ](#共通的データ処理)"
    ]
   },
   {
@@ -810,7 +875,7 @@
     "tags": []
    },
    "source": [
-    "#### 実行"
+    "#### モデリング"
    ]
   },
   {
@@ -1300,7 +1365,7 @@
     "- 判定確率を求めることが出来る線形分類器\n",
     "- 最尤推定という柔軟に最適解を求められる手法を採用\n",
     "\n",
-    "※ [イメージ](https://www.google.com/search?q=ロジスティック回帰&tbm=isch)、[説明](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E3%83%87%E3%83%BC%E3%82%BF%E3%83%9E%E3%82%A4%E3%83%8B%E3%83%B3%E3%82%B0%EF%BC%88DM%EF%BC%89-%20Python#we38b247)"
+    "※ [イメージ](https://www.google.com/search?q=ロジスティック回帰&tbm=isch)、[説明](https://dotnetdevelopmentinfrastructure.osscons.jp/index.php?%E7%B5%B1%E8%A8%88%E8%A7%A3%E6%9E%90#ge055200)"
    ]
   },
   {
@@ -1309,7 +1374,7 @@
    "metadata": {},
    "source": [
     "#### データ\n",
-    "ここだけ、違うデータを使用する。"
+    "２値分類専用なので、ここだけ、違うデータを使用する。"
    ]
   },
   {
@@ -1444,7 +1509,7 @@
    "id": "dddf2cc1-6c9b-4ec3-a58e-487058dcd4d6",
    "metadata": {},
    "source": [
-    "#### 実行"
+    "#### モデリング"
    ]
   },
   {
@@ -1471,8 +1536,7 @@
    "id": "9850acf4-1c89-4fb4-af6d-04e11cdb2ccf",
    "metadata": {},
    "source": [
-    "##### 推論\n",
-    "ココでは２値分類"
+    "##### 推論"
    ]
   },
   {
@@ -1606,6 +1670,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1ffafbb2-4078-45fe-9a5b-7e384b555a95",
+   "metadata": {},
+   "source": [
+    "##### 各特徴量"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "484bfcdc-61c1-44d2-ac66-8158742aa011",
@@ -1613,6 +1685,14 @@
    "outputs": [],
    "source": [
     "df_pickup_x.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9475b85-0eb4-4d71-91cb-ba6f714f4d1f",
+   "metadata": {},
+   "source": [
+    "##### 重要度"
    ]
   },
   {
@@ -1630,7 +1710,7 @@
    "id": "6d100828-58f1-454e-aace-5ed575a63fea",
    "metadata": {},
    "source": [
-    "#### 可視化（棒グラフ）"
+    "#### 棒グラフで表示"
    ]
   },
   {
