--- a/Notebook/Jupyter/path/ScikitLearnTraining4.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining4.ipynb
@@ -299,7 +299,7 @@
    "id": "f2b27d70-cda4-46e0-a1e5-40615510f53a",
    "metadata": {},
    "source": [
-    "#### 実行\n",
+    "#### モデリング\n",
     "- 取得する主成分数は説明変数の数以下に設定。\n",
     "- 学習だけのアルゴリズム。推論は行わない。"
    ]
@@ -365,7 +365,8 @@
    "id": "a3c143ae-86f9-4806-a13b-ff8d6172226f",
    "metadata": {},
    "source": [
-    "#### 結果（~~評価~~"
+    "#### 結果（~~評価~~\n",
+    "チューニング要素が主成分数の変更以外なさそうなので評価ではなく結果確認。"
    ]
   },
   {
@@ -531,7 +532,7 @@
    "id": "959e2bf0-849c-4e22-82da-f28d65e848a4",
    "metadata": {},
    "source": [
-    "#### 実行\n",
+    "#### モデリング\n",
     "教師なし学習で推論はない。"
    ]
   },
@@ -725,13 +726,13 @@
    "id": "94a65ae3-c2f8-47e2-8143-a5b05467416d",
    "metadata": {},
    "source": [
-    "- k-means法を\n",
-    "  - 異なる重心の初期値を用いての実行回数（n_init）の値を変え繰り返し実行し、\n",
-    "  - クラスタ内誤差平方和（SSE）が一番小さくなった学習器を採用する。\n",
-    "- k-means++法を選択する。  \n",
-    "k-means法の初期値の選択に改良を行なった方法\n",
-    "  - init='k-means++'と設定し実行する\n",
-    "  - initの既定値は'k-means++'になっている。"
+    "- k-means法をk-means++法に変更する。  \n",
+    "  - 初期値の選択方法を改良\n",
+    "    - 異なる重心の初期値を用いての実行回数（n_init）の値を変え繰り返し実行し、\n",
+    "    - クラスタ内誤差平方和（SSE）が一番小さくなった学習器を採用する。\n",
+    "  - 設定方法  \n",
+    "    - init='k-means++'と設定し実行する\n",
+    "    - initの既定値は'k-means++'になっている。"
    ]
   },
   {
@@ -777,6 +778,14 @@
     "plt.xlabel('Number of clusters')\n",
     "plt.ylabel('Distortion (SSE)')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d73532ad-d7ca-4a87-9b98-dc9b3ee728ff",
+   "metadata": {},
+   "source": [
+    "##### クラスタリングの質を判定する必要がある。"
    ]
   },
   {
