--- a/Notebook/Jupyter/path/TableOfContents.ipynb
+++ b/Notebook/Jupyter/path/TableOfContents.ipynb
@@ -121,7 +121,9 @@
   {
    "cell_type": "markdown",
    "id": "a082702a-8959-49a9-b663-69d502eed923",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### scikit-learn"
    ]
@@ -139,10 +141,7 @@
   {
    "cell_type": "markdown",
    "id": "f2eb1caa-e6bb-4c77-a14e-6d2e937e4222",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
-    "tags": []
-   },
+   "metadata": {},
    "source": [
     "#### [単回帰、重回帰分析](ScikitLearnTraining1.ipynb)\n",
     "- 単回帰分析\n",
@@ -195,7 +194,9 @@
   {
    "cell_type": "markdown",
    "id": "1c5c6788-81ba-4d85-9c57-41b0224ac008",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### Kaggleチュートリアル 編\n",
     "- [タイタニック生存者予測](ScikitLearnTraining6.ipynb)\n",
@@ -284,7 +285,7 @@
    "id": "5d2709eb-1702-488a-88b9-f4954dd7bb5b",
    "metadata": {},
    "source": [
-    "##### CNNの..."
+    "##### [単純なCNN](KasagoCNN1.ipynb)"
    ]
   },
   {
@@ -292,7 +293,7 @@
    "id": "a01668b8-12d4-42de-8111-eed3b2c07da0",
    "metadata": {},
    "source": [
-    "##### CNNの..."
+    "##### [深層のCNN](KasagoCNN2.ipynb)"
    ]
   },
   {
@@ -354,6 +355,56 @@
    "metadata": {},
    "source": [
     "### Apache Spark"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3b5dbf4-8d3e-43dd-819f-3f55f1e4cdfe",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## PPT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af7f2f53-8e28-4195-bd15-0c4555e69912",
+   "metadata": {},
+   "source": [
+    "### [DX系プロジェクトについてのレポート](https://1drv.ms/p/s!Amfs5caPP9r5jgb4poXUCpIy_33p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0561a799-eafe-484c-b8ae-518def672c02",
+   "metadata": {},
+   "source": [
+    "### [機械学習・深層学習についてのレポート](https://1drv.ms/p/s!Amfs5caPP9r5jh-m6pIMwKgDln1N)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b2b3133-0436-4296-ac97-db95b5557a51",
+   "metadata": {},
+   "source": [
+    "### [IoTソリューションについてのレポート](https://1drv.ms/p/s!Amfs5caPP9r5jigcq1ECbtb0nqE5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e16b84c7-1d48-458d-878b-ff66f38ff69c",
+   "metadata": {},
+   "source": [
+    "### [深層学習についてのレポート（CNN編）](https://1drv.ms/p/s!Amfs5caPP9r5jlAZEt6cg2zg_2cU)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5ae9d7a-81ba-4250-881f-f2491ccb3b36",
+   "metadata": {},
+   "source": [
+    "### [深層学習についてのレポート（RNN編）]()"
    ]
   }
  ],
