--- a/Notebook/Jupyter/path/ScikitLearnTraining5.ipynb
+++ b/Notebook/Jupyter/path/ScikitLearnTraining5.ipynb
@@ -372,7 +372,7 @@
    "id": "bff45b5d-126a-432a-9df9-182f48660bee",
    "metadata": {},
    "source": [
-    "##### ２値分類"
+    "##### ２クラス分類"
    ]
   },
   {
@@ -391,7 +391,7 @@
    "id": "0bc08ec2-5ab3-4d38-9871-2160a2f71940",
    "metadata": {},
    "source": [
-    "##### ３値分類"
+    "##### ３クラス分類"
    ]
   },
   {
@@ -418,7 +418,7 @@
    "id": "b9f340b5-f50c-4945-be24-215abcb852e7",
    "metadata": {},
    "source": [
-    "##### ２値分類"
+    "##### ２クラス分類"
    ]
   },
   {
@@ -437,7 +437,7 @@
    "id": "74c26806-76bc-45a9-b805-6d694af731a9",
    "metadata": {},
    "source": [
-    "##### ３値分類"
+    "##### ３クラス分類"
    ]
   },
   {
@@ -464,7 +464,7 @@
    "id": "014d5a15-74b3-4c96-9504-e769e88e2b5f",
    "metadata": {},
    "source": [
-    "##### ２値分類"
+    "##### ２クラス分類"
    ]
   },
   {
@@ -483,7 +483,7 @@
    "id": "ad2d9843-1425-4268-94a1-de9ebfc01035",
    "metadata": {},
    "source": [
-    "##### ３値分類"
+    "##### ３クラス分類"
    ]
   },
   {
@@ -798,7 +798,11 @@
    "id": "216b0ede-4e5b-444a-91be-136defabfcf5",
    "metadata": {},
    "source": [
-    "## 汎化性能の評価"
+    "## 汎化性能の評価（交差検証）\n",
+    "汎化性能が上がるようにチューニングする際に有用（後述の[グリットサーチ](#グリットサーチ)と併用可能）\n",
+    "- 学習時にのみ使用し汎化性能の良いパラメタに決める。\n",
+    "- 標準偏差で評価するがアンサンブル的な推論をする訳ではない。\n",
+    "- 実際に推論するにはホールド・アウト法で学習し直す方が良い。"
    ]
   },
   {
@@ -809,7 +813,8 @@
    },
    "source": [
     "### k分割交差検証法\n",
-    "[回帰問題のデータとアルゴリズム](ScikitLearnTraining1.ipynb)を使用。"
+    "- [概要](https://www.google.com/search?q=k%E5%88%86%E5%89%B2%E4%BA%A4%E5%B7%AE%E6%A4%9C%E8%A8%BC%E6%B3%95&tbm=isch)の確認\n",
+    "- [回帰問題のデータとアルゴリズム](ScikitLearnTraining1.ipynb)を使用。"
    ]
   },
   {
@@ -949,7 +954,8 @@
    "id": "2cd33ed4-49ed-49b3-acd8-0906bb6f4456",
    "metadata": {},
    "source": [
-    "###### 交差検証精度の標準偏差"
+    "###### 交差検証精度の標準偏差\n",
+    "この値が大きいとムラが大きい（不安定）と言える。"
    ]
   },
   {
@@ -965,10 +971,13 @@
   {
    "cell_type": "markdown",
    "id": "20c88c59-b5c8-4545-927e-416832b4ddf7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### 層化k分割交差検証法\n",
-    "[分類問題のデータとアルゴリズム](ScikitLearnTraining3.ipynb)を使用。"
+    "- [概要](https://www.google.com/search?q=%E5%B1%A4%E5%8C%96k%E5%88%86%E5%89%B2%E4%BA%A4%E5%B7%AE%E6%A4%9C%E8%A8%BC%E6%B3%95&tbm=isch)の確認\n",
+    "- [分類問題のデータとアルゴリズム](ScikitLearnTraining3.ipynb)を使用。"
    ]
   },
   {
@@ -1093,7 +1102,8 @@
    "id": "d53899f9-22da-473b-b665-89dae7b3980e",
    "metadata": {},
    "source": [
-    "###### 交差検証精度の標準偏差"
+    "###### 交差検証精度の標準偏差\n",
+    "この値が大きいとムラが大きい（不安定）と言える。"
    ]
   },
   {
@@ -1348,7 +1358,7 @@
    "id": "7a252050-3519-45e7-aa99-c87fba4dd109",
    "metadata": {},
    "source": [
-    "##### [主成分分析後の分類など](ScikitLearnTraining3.ipynb)"
+    "##### [主成分分析後の分類など](ScikitLearnTraining4.ipynb)"
    ]
   },
   {
